Cambios: · Solucion errores imagenes · Icono de pestaña

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Cabify, moverte por la ciudad es el comienzo de todo.</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="images/LogoPestaña.jpg">
 </head>
 
 <body>
     <nav>
-        <img src="/images/Iconotipo.png" alt="startMenuIcon" id="navIcon">
+        <img src="images/Iconotipo.png" alt="startMenuIcon" id="navIcon">
         <div class="navLinks">
             <a href="#">Inicio</a>
             <a href="#">About Us</a>
@@ -23,7 +24,7 @@
         </button>
     </nav>
     <div class="bienvenida">
-        <img src="/images/Logo.png" alt="logotipo" class="bienvenidaLogo">
+        <img src="images/Logo.png" alt="logotipo" class="bienvenidaLogo">
         <h1>Moverte por la ciudad es el comienzo de todo.</h1>
         <h3>Cabify, tu mejor opción de transporte</h3>
         <div class="fondo">
