Cambio de diseño del div bienvenida Nuevo diseño al botón de Registrarse en bienvenida correccion de diseño

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>Moverte por la ciudad es el comienzo de todo.</h1>
         <h3>Cabify, tu mejor opción de transporte</h3>
         <div class="fondo">
-            <button class="navButton">Conoce más</button>
+            <button class="navButton" id="bienvenidaButton">Regístrate ahora</button>
         </div>
     </div>
 </body>
