Modified: README.md New File: Images Modified: index.html Modified: style/style.css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#">Contacto</a>
         </div>
         <button class="navButton">
-            <p>Entrar</p>
+            Entrar
         </button>
     </nav>
     <div class="bienvenida">
