new file:   images/ContornoAlerta.svg (se eliminará pronto) modified:   index.html modified:   style/style.css

--- a/index.html
+++ b/index.html
@@ -31,6 +31,35 @@
             <button class="navButton" id="bienvenidaButton">Regístrate ahora</button>
         </div>
     </div>
+    <div class="seccionSugerencias">
+        <h2>Sugerencias</h2>
+        <section class="sugerencias">
+
+            <div class="sugerenciasContainer">
+                <div class="sugerenciasCard">
+                    <h3>¿Quieres ser parte de Cabify?</h3>
+                    <p>Trabaja como uno de nuestros repartidores moviendo a los tuyos!</p>
+                    <img src="images/GIFCocheCabify.gif" alt="logotipo" class="sugerenciasLogo">
+                </div>
+            </div>
+            <div class="sugerenciasContainer">
+                <div class="sugerenciasCard">
+                    <img src="images/GIFCocheCabify.gif" alt="logotipo" class="sugerenciasLogo">
+                    <h3>¿Quieres ser parte de Cabify?</h3>
+                    <p>Trabaja como uno de nuestros repartidores moviendo a los tuyos!</p>
+
+                </div>
+            </div>
+            <div class="sugerenciasContainer">
+                <div class="sugerenciasCard">
+                    <img src="images/GIFCocheCabify.gif" alt="logotipo" class="sugerenciasLogo">
+                    <h3>¿Quieres ser parte de Cabify?</h3>
+                    <p>Trabaja como uno de nuestros repartidores moviendo a los tuyos!</p>
+
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 
 </html>
