Cambios variados, se ha progresado el media query - Desktop design - Default design 1/2

--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
 
             <div class="sugerenciasContainer">
                 <div class="sugerenciasCard">
-                    <h3>¿Quieres ser parte de Cabify?</h3>
-                    <p>Trabaja como uno de nuestros repartidores moviendo a los tuyos!</p>
+                    <div class="texto">
+                        <h3>¿Quieres ser parte de Cabify?</h3>
+                        <p>Trabaja como uno de nuestros repartidores moviendo a los tuyos!</p>
+                    </div>
+
                     <img src="images/GIFCocheCabify.gif" alt="logotipo" class="sugerenciasLogo">
                 </div>
             </div>
