--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cabify, moverte por la ciudad es el comienzo de todo.</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/desktop.css">
+
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="images/LogoPestaña.jpg">
 </head>
@@ -23,42 +27,46 @@
             Entrar
         </button>
     </nav>
-    <div class="bienvenida">
+    <header class="bienvenida">
         <img src="images/Logo.png" alt="logotipo" class="bienvenidaLogo">
         <h1>Moverte por la ciudad es el comienzo de todo.</h1>
         <h3>Cabify, tu mejor opción de transporte</h3>
         <div class="fondo">
-            <button class="navButton" id="bienvenidaButton">Regístrate ahora</button>
+            <button id="bienvenidaButton">Regístrate ahora</button>
         </div>
-    </div>
+    </header>
     <div class="seccionSugerencias">
         <h2>Sugerencias</h2>
         <section class="sugerencias">
-
             <div class="sugerenciasContainer">
                 <div class="sugerenciasCard">
                     <div class="texto">
                         <h3>¿Quieres ser parte de Cabify?</h3>
-                        <p>Trabaja como uno de nuestros repartidores moviendo a los tuyos!</p>
+                        <p>Trabaja como uno de nuestros repartidores moviendo a los tuyos y ganandote un dinero!</p>
                     </div>
-
-                    <img src="images/GIFCocheCabify.gif" alt="logotipo" class="sugerenciasLogo">
+                    <img src="images/VechiculosCabify/Coche1.png" alt="logotipo" class="sugerenciasLogo">
+                    <button class="saberMas">Saber mas</button>
                 </div>
             </div>
             <div class="sugerenciasContainer">
                 <div class="sugerenciasCard">
-                    <img src="images/GIFCocheCabify.gif" alt="logotipo" class="sugerenciasLogo">
-                    <h3>¿Quieres ser parte de Cabify?</h3>
-                    <p>Trabaja como uno de nuestros repartidores moviendo a los tuyos!</p>
-
+                    <div class="texto">
+                        <h3>Muevete rápido</h3>
+                        <p>Alquila nuestros patines eléctricos para moverte por la ciudad con mayor facilidad!</p>
+                    </div>
+                    <img src="images/VechiculosCabify/Patineta.png" alt="Patineta" class="sugerenciasLogo">
+                    <button class="saberMas">Saber mas</button>
                 </div>
             </div>
             <div class="sugerenciasContainer">
                 <div class="sugerenciasCard">
-                    <img src="images/GIFCocheCabify.gif" alt="logotipo" class="sugerenciasLogo">
-                    <h3>¿Quieres ser parte de Cabify?</h3>
-                    <p>Trabaja como uno de nuestros repartidores moviendo a los tuyos!</p>
-
+                    <div class="texto">
+                        <h3>Viaja en tren con Cabify</h3>
+                        <p>Compra tu billete de tren en cualquier línea de tren con nosotros y asi tener descuentos
+                            increibles!</p>
+                    </div>
+                    <img src="images/VechiculosCabify/Tren.png" alt="tren" class="sugerenciasLogo">
+                    <button class="saberMas">Saber mas</button>
                 </div>
             </div>
         </section>
