--- a/index.html
+++ b/index.html
@@ -70,7 +70,19 @@
                 </div>
             </div>
         </section>
+
     </div>
+    <section class="descargarApp">
+        <div class="cuadroDescarga">
+            <div class="areaTexto">
+                <h1>Descarga la app de Cabify</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam earum optio explicabo
+                    laudantium neque, culpa sequi. Eaque reiciendis vero perspiciatis architecto ut, reprehenderit
+                    sed excepturi cupiditate, sint, id voluptatum quis.</p>
+            </div>
+            <img src="images/desktop.webp" alt="MOVIL">
+        </div>
+    </section>
 </body>
 
 </html>
