--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cabify, moverte por la ciudad es el comienzo de todo.</title>
-    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/desktop.css">
-
-
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="images/LogoPestaña.jpg">
 </head>
 
 <body>
+    <!-- Barra de nav -->
     <nav>
         <img src="images/Iconotipo.png" alt="startMenuIcon" id="navIcon">
         <div class="navLinks">
@@ -23,64 +20,72 @@
             <a href="#">About Us</a>
             <a href="#">Contacto</a>
         </div>
-        <button class="navButton">
-            Entrar
-        </button>
+        <button class="navButton">Entrar</button>
     </nav>
+
+    <!-- Bienvenida -->
     <header class="bienvenida">
         <img src="images/Logo.png" alt="logotipo" class="bienvenidaLogo">
         <h1>Moverte por la ciudad es el comienzo de todo.</h1>
-        <h3>Cabify, tu mejor opción de transporte</h3>
+        <h3>Cabify, tu mejor opción de transporte</h3>
         <div class="fondo">
             <button id="bienvenidaButton">Regístrate ahora</button>
         </div>
     </header>
+
+    <!-- Sugerencias -->
     <div class="seccionSugerencias">
         <h2>Sugerencias</h2>
         <section class="sugerencias">
+            <!-- Sugerencia 1 -->
             <div class="sugerenciasContainer">
                 <div class="sugerenciasCard">
                     <div class="texto">
                         <h3>¿Quieres ser parte de Cabify?</h3>
-                        <p>Trabaja como uno de nuestros repartidores moviendo a los tuyos y ganandote un dinero!</p>
+                        <p>Trabaja como uno de nuestros repartidores moviendo a los tuyos y ganándote un dinero.</p>
                     </div>
                     <img src="images/VechiculosCabify/Coche1.png" alt="logotipo" class="sugerenciasLogo">
-                    <button class="saberMas">Saber mas</button>
+                    <button class="saberMas">Saber más</button>
                 </div>
             </div>
+
+            <!-- Sugerencia 2 -->
             <div class="sugerenciasContainer">
                 <div class="sugerenciasCard">
                     <div class="texto">
-                        <h3>Muevete rápido</h3>
-                        <p>Alquila nuestros patines eléctricos para moverte por la ciudad con mayor facilidad!</p>
+                        <h3>Muévete rápido</h3>
+                        <p>Alquila nuestros patines eléctricos para moverte por la ciudad con mayor facilidad.</p>
                     </div>
                     <img src="images/VechiculosCabify/Patineta.png" alt="Patineta" class="sugerenciasLogo">
-                    <button class="saberMas">Saber mas</button>
+                    <button class="saberMas">Saber más</button>
                 </div>
             </div>
+
+            <!-- Sugerencia 3 -->
             <div class="sugerenciasContainer">
                 <div class="sugerenciasCard">
                     <div class="texto">
                         <h3>Viaja en tren con Cabify</h3>
-                        <p>Compra tu billete de tren en cualquier línea de tren con nosotros y asi tener descuentos
-                            increibles!</p>
+                        <p>Compra tu billete de tren en cualquier línea de tren con nosotros y obtén descuentos
+                            increíbles.</p>
                     </div>
                     <img src="images/VechiculosCabify/Tren.png" alt="tren" class="sugerenciasLogo">
-                    <button class="saberMas">Saber mas</button>
+                    <button class="saberMas">Saber más</button>
                 </div>
             </div>
         </section>
-
     </div>
+
+    <!-- Descargar App -->
     <section class="descargarApp">
         <div class="cuadroDescarga">
             <div class="areaTexto">
                 <h1>Descarga la app de Cabify</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam earum optio explicabo
-                    laudantium neque, culpa sequi. Eaque reiciendis vero perspiciatis architecto ut, reprehenderit
-                    sed excepturi cupiditate, sint, id voluptatum quis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam earum optio explicabo laudantium
+                    neque, culpa sequi. Eaque reiciendis vero perspiciatis architecto ut, reprehenderit sed excepturi
+                    cupiditate, sint, id voluptatum quis.</p>
             </div>
-            <img src="images/desktop.webp" alt="MOVIL">
+            <img src="images/desktop.webp" alt="Móvil">
         </div>
     </section>
 </body>
