--- a/index.html
+++ b/index.html
@@ -81,9 +81,25 @@
         <div class="cuadroDescarga">
             <div class="areaTexto">
                 <h1>Descarga la app de Cabify</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam earum optio explicabo laudantium
-                    neque, culpa sequi. Eaque reiciendis vero perspiciatis architecto ut, reprehenderit sed excepturi
-                    cupiditate, sint, id voluptatum quis.</p>
+                <p>Descarga la app de Cabify y descubre una forma fácil de desplazarte por la ciudad. Con nuestra
+                    aplicación, podrás solicitar un viaje en menos de 30 segundos y recibirás las mejores opciones de
+                    transporte para tu ruta. La app de Cabify es intuitiva y fácil de usar. Solo debes seleccionar tu
+                    punto de partida y destino, elegir el tipo de vehículo que prefieras y nuestro algoritmo de
+                    transporte inteligente se encargará de encontrar la mejor opción para ti. También podrás seguir en
+                    vivo tu viaje en mapa, ver el precio de tu viaje y recibir notificaciones en tiempo real. ¡Es
+                    gratis! </p>
+                <div class="botonesDescargar">
+                    <a href="https://apps.apple.com/es/app/cabify-viaja-como-te-mereces/id476087442" class="appstore"
+                        target="_blank">
+                        <i class="fab fa-apple"></i>
+                        <span>Descarga en la App Store</span>
+                    </a>
+                    <a href="https://play.google.com/store/apps/details?id=com.cabify.rider&hl=es" class="googleplay"
+                        target="_blank">
+                        <i class="fab fa-google-play"></i>
+                        <span>Descarga en la Google Play</span>
+                    </a>
+                </div>
             </div>
             <img src="images/desktop.webp" alt="Móvil">
         </div>
