--- a/index.html
+++ b/index.html
@@ -104,6 +104,70 @@
             <img src="images/desktop.webp" alt="Móvil">
         </div>
     </section>
+
+    <!-- Opiniones -->
+    <section class="sectionOpiniones">
+        <h2>Opiniones</h2>
+        <div class="opiniones">
+            <div class="opinion">
+                <img src="images/Usuarios/User1.jpeg" alt="PerfilSugerencia">
+                <div class="resena">
+                    <h3>DanielTraveller87</h3>
+                    <p>El servicio es excelente, los conductores son amables y los coches siempre están limpios. Me encanta poder programar mis viajes con anticipación. Muy recomendable.</p>
+                    <div class="estrellas">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="opinion">
+                <img src="images/Usuarios/User2.jpg" alt="PerfilSugerencia">
+                <div class="resena">
+                    <h3>LeoTech06</h3>
+                    <p>Los precios son competitivos y los coches son muy cómodos. Además, es genial tener la opción de elegir el tipo de vehículo.</p>
+                    <div class="estrellas">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="opinion">
+                <img src="images/Usuarios/User3.jpg" alt="PerfilSugerencia">
+                <div class="resena">
+                    <h3>LunaStar06</h3>
+                    <p>Me encanta la transparencia de las tarifas y la opción de pago desde la app. Siempre llego a tiempo y los conductores son súper profesionales. ¡Un 10!</p>
+                    <div class="estrellas">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="opinion">
+                <img src="images/Usuarios/User4.png" alt="PerfilSugerencia">
+                <div class="resena">
+                    <h3>Diego25XP</h3>
+                    <p>El servicio es impecable, el coche llegó rápido y el conductor fue muy educado. Además, me gusta que ofrecen agua y música personalizada. Definitivamente, repetiré.</p>
+                    <div class="estrellas">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </body>
 
 </html>
