--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                 <img src="images/Usuarios/User1.jpeg" alt="PerfilSugerencia">
                 <div class="resena">
                     <h3>DanielTraveller87</h3>
-                    <p>El servicio es excelente, los conductores son amables y los coches siempre están limpios. Me encanta poder programar mis viajes con anticipación. Muy recomendable.</p>
+                    <p>El servicio es excelente, los conductores son amables y los coches siempre están limpios. Me
+                        encanta poder programar mis viajes con anticipación. Muy recomendable.</p>
                     <div class="estrellas">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -127,7 +128,8 @@
                 <img src="images/Usuarios/User2.jpg" alt="PerfilSugerencia">
                 <div class="resena">
                     <h3>LeoTech06</h3>
-                    <p>Los precios son competitivos y los coches son muy cómodos. Además, es genial tener la opción de elegir el tipo de vehículo.</p>
+                    <p>Los precios son competitivos y los coches son muy cómodos. Además, es genial tener la opción de
+                        elegir el tipo de vehículo.</p>
                     <div class="estrellas">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -141,7 +143,8 @@
                 <img src="images/Usuarios/User3.jpg" alt="PerfilSugerencia">
                 <div class="resena">
                     <h3>LunaStar06</h3>
-                    <p>Me encanta la transparencia de las tarifas y la opción de pago desde la app. Siempre llego a tiempo y los conductores son súper profesionales. ¡Un 10!</p>
+                    <p>Me encanta la transparencia de las tarifas y la opción de pago desde la app. Siempre llego a
+                        tiempo y los conductores son súper profesionales. ¡Un 10!</p>
                     <div class="estrellas">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -155,7 +158,8 @@
                 <img src="images/Usuarios/User4.png" alt="PerfilSugerencia">
                 <div class="resena">
                     <h3>Diego25XP</h3>
-                    <p>El servicio es impecable, el coche llegó rápido y el conductor fue muy educado. Además, me gusta que ofrecen agua y música personalizada. Definitivamente, repetiré.</p>
+                    <p>El servicio es impecable, el coche llegó rápido y el conductor fue muy educado. Además, me gusta
+                        que ofrecen agua y música personalizada. Definitivamente, repetiré.</p>
                     <div class="estrellas">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -165,9 +169,50 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
+    <footer>
+        <div class="footerArea1">
+            <div class="footerImg">
+                <img src="images/Logo.png" alt="Icon">
+            </div>
+            <div class="rrss">
+                <a href="https://x.com/cabify_espana"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.instagram.com/cabify_espana"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/cabifyEs"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.tiktok.com/@cabify_espana"><i class="fa-brands fa-tiktok"></i></a>
+            </div>
+        </div>
+        <div class="areaTextoFooter">
+            <div class="FooterTextArea">
+                <ul>
+                    <li><a href="#">Trabaja con nosotros</a></li>
+                    <li><a href="#">Condiciones de uso</a></li>
+                    <li><a href="#">Terminos Legales</a></li>
+                    <li><a href="#">Nuestra flota</a></li>
+                    <li><a href="#">Condiciones de Envio</a></li>
+                </ul>
+            </div>
+            <div class="FooterTextArea">
+                <ul>
+                    <li><a href="#">Centro de Soporte</a></li>
+                    <li><a href="#">Contacto de soporte</a></li>
+                    <li><a href="#">Dirección de centro de ayuda</a></li>
+                    <li><a href="#">Reporte de servicios</a></li>
+                    <li><a href="#">Soporte de suscripciones</a></li>
+                </ul>
+            </div>
+            <div class="FooterTextArea">
+                <ul>
+                    <li><a href="#">Servicio para empresas</a></li>
+                    <li><a href="#">Condiciones de uso con empresas</a></li>
+                    <li><a href="#">Recursos empresariales</a></li>
+                    <li><a href="#">Tarifas de servicios</a></li>
+                    <li><a href="#">Seguridad</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
